# my_flet

./: events.json  main.py  notification_helper.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  build.yml
downloads/: build_log.txt
