- name: Create pyproject.toml
  run: |
    cat > pyproject.toml << 'EOF'
    [project]
    name = "birthday_reminder"
    version = "${{ steps.version.outputs.version }}"
    description = "事件提醒助手"
    requires-python = ">=3.9"
    dependencies = [
        "flet",
        "flet-audio",
        "lunardate",
        "requests",
        "mutagen",
    ]

    [tool.flet]
    org = "com.jianghuajie"
    app_name = "事件提醒助手"
    product = "birthday_reminder"

    [tool.flet.flutter]
    dependencies = ["flet_audio"]

    [tool.flet.android.permission]
    "android.permission.READ_MEDIA_AUDIO" = true
    "android.permission.READ_EXTERNAL_STORAGE" = true
    "android.permission.INTERNET" = true
    "android.permission.WAKE_LOCK" = true
    "android.permission.FOREGROUND_SERVICE" = true

    [tool.flet.android]
    signing_key_alias = "event-key"
    signing_key_password = "James8329@"
    signing_keystore_password = "James8329@"
    signing_keystore = "android-key.jks"
    EOF